src/tui/views/snapshots/awsui__tui__views__ec2_detail__tests__render_returns_sg_rules_snapshot_when_sg_selected.snap
---
source: src/tui/views/ec2_detail.rs
expression: buffer_to_string(&terminal)
---
┌ web-01 (i-0abc1234) ─────────────────────────── dev-account │ ap-northeast-1 ┐
│ [Overview] [Tags] [Security Groups] [Metrics]                                │
│ web-sg (sg-001)                                                              │
│Direction  Protocol   Port Range   Source/Dest           Description          │
│Inbound    tcp        443          0.0.0.0/0             HTTPS                │
│Inbound    tcp        80           0.0.0.0/0             HTTP                 │
│Outbound   -1         All          0.0.0.0/0                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ]/[:switch-tab j/k:select Enter:show-rules Esc:back ?:help
