src/tui/views/snapshots/awsui__tui__views__ec2_detail__tests__render_returns_sg_table_when_security_groups_tab.snap
---
source: src/tui/views/ec2_detail.rs
expression: buffer_to_string(&terminal)
---
┌ web-01 (i-0abc1234) ─────────────────────────── dev-account │ ap-northeast-1 ┐
│ [Overview] [Tags] [Security Groups] [Metrics]                                │
│Group ID             Group Name           Description    Inbound    Outbound  │
│sg-001               web-sg               Web security g 1          1         │
│sg-002               db-sg                Database secur 0          0         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ]/[:switch-tab j/k:select Enter:show-rules Esc:back ?:help
