src/tui/views/snapshots/awsui__tui__views__ec2_detail__tests__render_returns_tags_snapshot_when_tags_tab.snap
---
source: src/tui/views/ec2_detail.rs
expression: buffer_to_string(&terminal)
---
┌ web-01 (i-0abc1234) ─────────────────────────── dev-account │ ap-northeast-1 ┐
│ [Overview] [Tags]                                                            │
│Key                     Value                                                 │
│Name                    web-01                                                │
│env                     production                                            │
│team                    backend                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Tab:switch-tab y:copy-value Esc:back
